adjust container width

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body p {
 /* Container */
 #container {
   width: 360px;
+  max-width: 588px;
   height: 712px;
   margin: 56px auto 0px;
   padding: 0 24px;
